# esp-jsondb

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  library.json  library.properties
.github/workflows/: ci.yml  release.yml
collection/: collection.cpp
document/: document.h
examples/AsyncFileUpload/: AsyncFileUpload.ino
examples/AsyncLargeFileUpload/: AsyncLargeFileUpload.ino
examples/BulkOperations/: BulkOperations.ino
examples/CacheDisabled/: CacheDisabled.ino
examples/Collections/: Collections.ino
examples/ConfigManagement/: ConfigManagement.ino
examples/CreateMany/: CreateMany.ino
examples/ExternalFs/: ExternalFs.ino
examples/FileStreaming/: FileStreaming.ino
examples/FindOne/: FindOne.ino
examples/LargeFileStreaming/: LargeFileStreaming.ino
examples/QuickStart/: QuickStart.ino
examples/References/: References.ino
examples/SchemaValidation/: SchemaValidation.ino
examples/UniqueFields/: UniqueFields.ino
examples/UpdateOne/: UpdateOne.ino
src/: ESPJsonDB.h  ESPJsonDBCompressor.h
src/esp_jsondb/: db.cpp  db.h  db_compressor.cpp  db_files.cpp  db_files_async.cpp  db_runtime.h
src/esp_jsondb/collection/: collection.cpp  collection.h
src/esp_jsondb/document/: document.cpp  document.h
src/esp_jsondb/files/: file_store.cpp  file_store.h  file_store_impl.h
src/esp_jsondb/utils/: refs.h  (+9 more)
test/: CMakeLists.txt  bulkTests.cpp  collectionTests.cpp  dbTest.cpp  dbTest.h  delayedSyncTests.cpp  documentTests.cpp  fileTests.cpp  psramTests.cpp  refTests.cpp  schemaTests.cpp  syncStatusTests.cpp
utils/: fr_mutex.h  schema.h
(+4 files in other folders)
